# desktop-agent

./: .env.example  README.md  pyproject.toml
examples/: simple_demo.py  simple_demo_v2.py
src/desktop_agent/: __init__.py  agent.py  config.py  types.py
src/desktop_agent/decision/: __init__.py  agent.py  grounding.py
src/desktop_agent/execution/: __init__.py  executor.py
src/desktop_agent/vision/: __init__.py  capture.py  grounding.py
